<resources>
    <string name="app_name">CountryApps</string>
    <string name="about">about</string>
    <string name="developer_name">Richard Owen Hoan</string>
    <string name="developer_email">richardowen2411@gmail.com</string>
    <string name="content_specs_battery">2,770 mAh battery\n
            Standby time (LTE): up to 19 days\n
            Talk time (3g/WCDMA): up to 26 hours\n
            Internet use time (Wi-Fi): up to 13 hours\n
            Internet use time (LTE): up to 13 hours\n
            Video playback: up to 13 hours\n
            Audio playback (via headset): up to 110 hours\n
            Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="country_example">Indonesia</string>
    <string name="desc_example">Indonesia adalah negara kepulauan terbesar di dunia yang terkenal dengan keindahan alamnya, keanekaragaman budaya, dan warisan sejarahnya.</string>
    <string name="stats_example">
        Bahasa: Bahasa Indonesia&#10;
        Luas Wilayah: Sekitar 1.904.569 kilometer persegi&#10;
        Bentuk Pemerintahan: Republik&#10;
        Agama Dominan: Islam&#10;
        Makanan Terkenal: Nasi goreng, rendang, sate, mie goreng, gado-gado&#10;
    </string>
    <string name="detail_example">
        Indonesia adalah negara kepulauan terbesar di dunia, terdiri dari lebih dari 17.000 pulau yang tersebar di antara dua samudra.&#10;
        Ini adalah rumah bagi berbagai suku dan budaya yang beraneka ragam, dengan lebih dari 700 bahasa yang berbeda.&#10;
        Negara ini juga memiliki sejarah panjang yang mencakup masa prasejarah, kerajaan Hindu-Buddha, hingga penjajahan Belanda.&#10;
        Keindahan alam Indonesia luar biasa, termasuk gunung berapi yang aktif, hutan hujan tropis, dan terumbu karang yang menakjubkan di bawah air laut.&#10;
    </string>
    <string name="place_example">Bali, Jakarta, Borobudur, Taman Nasional Komodo</string>
    <string name="deskripsi_negara">Deskripsi Negara</string>
    <string name="status_negara">Status Negara</string>
    <string name="tempat_wisata_terkenal">Tempat Wisata Terkenal</string>
    <string name="gambarnegara">gambarNegara</string>
    <string name="flag">flag</string>
    <string-array name="data_name">
        <item>Indonesia</item>
        <item>Amerika Serikat</item>
        <item>Inggris</item>
        <item>Prancis</item>
        <item>Jepang</item>
        <item>Australia</item>
        <item>Italia</item>
        <item>Kanada</item>
        <item>Spanyol</item>
        <item>Jerman</item>
        <item>China</item>
        <item>India</item>
        <item>Rusia</item>
        <item>Brazil</item>
        <item>Mesir</item>
        <item>Argentina</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Flag_of_Indonesia.svg/1920px-Flag_of_Indonesia.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/1920px-Flag_of_the_United_States.svg.png</item>
        <item>https://asset-a.grid.id/crop/0x0:0x0/x/photo/2019/03/27/1607473002.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/1920px-Flag_of_France.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/9/9e/Flag_of_Japan.svg/1920px-Flag_of_Japan.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Flag_of_Australia.svg/1920px-Flag_of_Australia.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Flag_of_Italy.svg/1920px-Flag_of_Italy.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Flag_of_Canada_%28Pantone%29.svg/1920px-Flag_of_Canada_%28Pantone%29.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Spain.svg/1920px-Flag_of_Spain.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1920px-Flag_of_Germany.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Flag_of_the_People%27s_Republic_of_China.svg/1920px-Flag_of_the_People%27s_Republic_of_China.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1920px-Flag_of_India.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/f/f3/Flag_of_Russia.svg/1920px-Flag_of_Russia.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/1920px-Flag_of_Brazil.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Flag_of_Egypt.svg/1920px-Flag_of_Egypt.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Flag_of_Argentina.svg/1920px-Flag_of_Argentina.svg.png</item>
    </string-array>
    <string-array name="data_description">
        <item>Indonesia adalah negara kepulauan terbesar di dunia yang terkenal dengan keindahan alamnya, keanekaragaman budaya, dan warisan sejarahnya.</item>
        <item>Amerika Serikat adalah negara beriklim sedang terbesar di dunia dengan keragaman geografi yang luar biasa.</item>
        <item>Inggris adalah salah satu negara yang berada di Britania Raya, terkenal dengan sejarahnya yang kaya</item>
        <item>Prancis adalah negara yang terkenal dengan mode, seni, dan masakan yang lezat</item>
        <item>Jepang adalah negara yang berlimpah dengan budaya yang kaya dan teknologi modern</item>
        <item>Australia adalah negara benua yang terkenal dengan keindahan alamnya</item>
        <item>Italia adalah negara yang terkenal dengan seni, sejarah, dan kulinernya yang lezat</item>
        <item>Kanada adalah negara terluas kedua di dunia yang terkenal dengan keindahan alamnya</item>
        <item>Spanyol adalah negara di Eropa Selatan yang terkenal dengan budaya, tarian, dan makanannya yang meriah.</item>
        <item>Jerman adalah negara yang terkenal dengan sejarahnya yang kaya, teknologi canggih, dan bir terbaik di dunia</item>
        <item>Cina adalah negara terbesar di dunia dengan sejarah yang kaya dan budaya yang beragam</item>
        <item>India adalah negara yang beragam budaya, agama, dan geografi.</item>
        <item>Rusia adalah negara terluas di dunia dengan budaya yang unik dan sejarah yang kuat</item>
        <item>Brasil adalah negara terbesar di Amerika Selatan yang terkenal dengan karneval, pantai, dan hutan hujan Amazon.</item>
        <item>Mesir adalah negara bersejarah yang terkenal dengan piramida, sungai Nil, dan budaya kuno.</item>
        <item>Argentina adalah negara di Amerika Selatan yang terkenal dengan tango, daging panggang, dan pemandangan alam yang menakjubkan.</item>
    </string-array>
</resources>