<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/countryPhoto"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/gambarnegara" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/country_example"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/status_negara"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryPhoto" />

        <TextView
            android:id="@+id/countryStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:textSize="15sp"
            android:text="@string/stats_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tempat_wisata_terkenal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryStats" />

        <TextView
            android:id="@+id/countryPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="14dp"
            android:textSize="15sp"
            android:text="@string/place_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/deskripsi_negara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryPlace" />

        <TextView
            android:id="@+id/countryDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_example"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/countryFlag"
            android:layout_width="122dp"
            android:layout_height="73dp"
            app:layout_constraintBottom_toBottomOf="@+id/countryPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="@+id/countryPhoto"
            app:layout_constraintTop_toTopOf="@+id/countryPhoto"
            app:layout_constraintVertical_bias="0.052"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/flag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>